--- a/frontend/src/pages/Player/SearchPanel/SearchPanel.module.scss
+++ b/frontend/src/pages/Player/SearchPanel/SearchPanel.module.scss
@@ -1,7 +1,13 @@
 @import 'src/static/shared.scss';
 
 .searchPanel {
+    --top-padding: 105px;
+
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 145px);;
+    height: calc(100vh - var(--top-padding));
+
+    &.bannerShown {
+        height: calc(100vh - var(--top-padding) - var(--banner-height));
+    }
 }
