--- a/frontend/src/components/Pagination/Pagination.module.scss
+++ b/frontend/src/components/Pagination/Pagination.module.scss
@@ -3,7 +3,7 @@
     flex-shrink: 0;
     justify-content: flex-end;
     left: 0;
-    margin: 25px 0;
+    margin: var(--size-large) 0;
     width: 100%;
 }
 
