[HIG-2339] improve styling of session feed (#2662)
improve session and error feed pagination container UI

--- a/frontend/src/components/Pagination/Pagination.module.scss
+++ b/frontend/src/components/Pagination/Pagination.module.scss
@@ -3,9 +3,7 @@
     flex-shrink: 0;
     justify-content: flex-end;
     left: 0;
-    margin-top: var(--size-medium);
-    position: absolute;
-    top: calc(100vh - 182px);
+    margin: var(--size-large) 0;
     width: 100%;
 }
 
