--- a/frontend/src/pages/Player/SearchPanel/SearchPanel.module.scss
+++ b/frontend/src/pages/Player/SearchPanel/SearchPanel.module.scss
@@ -1,24 +1,13 @@
 @import 'src/static/shared.scss';
 
-.filtersContainer {
-    align-items: center;
-    column-gap: var(--size-small);
-    display: flex;
-    flex-wrap: wrap;
-    margin-bottom: var(--size-large);
-    row-gap: var(--size-small);
-}
-
 .searchPanel {
+    --top-padding: 105px;
+
     display: flex;
     flex-direction: column;
-    flex-grow: 1;
-    height: 100%;
-}
+    height: calc(100vh - var(--top-padding));
 
-.searchContainer {
-    @include hide-scrollbar;
-    height: calc(100vh - 170px);
-    overflow-x: hidden;
-    overflow-y: auto;
+    &.bannerShown {
+        height: calc(100vh - var(--top-padding) - var(--banner-height));
+    }
 }
