use latest regular virtuoso with scroll placeholder

--- a/frontend/src/pages/Player/Toolbar/DevToolsWindow/ResourcePage/ResourcePage.module.scss
+++ b/frontend/src/pages/Player/Toolbar/DevToolsWindow/ResourcePage/ResourcePage.module.scss
@@ -67,7 +67,7 @@ $right-padding: 12px;
 .networkTableWrapper {
     height: calc(100% - var(--player-toolbar-height));
     margin-left: 1px;
-    overflow-x: auto;
+    overflow-y: hidden;
     position: relative;
 }
 
