improve dashboard creation styling

--- a/frontend/src/pages/Dashboards/components/CreateDashboardModal/CreateDashboardModal.module.scss
+++ b/frontend/src/pages/Dashboards/components/CreateDashboardModal/CreateDashboardModal.module.scss
@@ -19,7 +19,6 @@
 
 
 .name {
-    display: grid;
-    grid-gap: var(--size-medium);
-    grid-template-columns: 1fr;
+    flex-grow: 1;
+    margin-left: var(--size-medium);
 }
