fix type attribute and setting layout

--- a/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
+++ b/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
@@ -15,12 +15,13 @@
         background: var(--color-gray-400);
         background-image: none;
         border-radius: var(--size-small);
-        height: var(--size-xLarge);
+        bottom: calc(var(--size-medium)) !important;
+        height: var(--size-small);
         opacity: 0;
         right: calc(var(--size-small)) !important;
         transform: unset !important;
         transition: opacity 0.2s ease-in-out;
-        width: var(--size-xxSmall);
+        width: var(--size-small);
 
         &::after {
             content: none;
