--- a/frontend/src/components/LineChart/LineChart.module.scss
+++ b/frontend/src/components/LineChart/LineChart.module.scss
@@ -68,3 +68,23 @@
     font-size: 12px;
     line-height: initial;
 }
+
+.verticalSlider {
+    height: 162px;
+    margin-top: 38px;
+}
+
+.sliderThumb {
+    background-color: var(--color-primary-background);
+    border-radius: var(--border-radius);
+    border: 3px solid var(--color-gray-300);
+    color: var(--color-purple-500);
+    font-size: 8px;
+    left: 50px;
+    padding: 2px;
+    position: absolute;
+}
+
+.sliderTrack {
+    background-color: red;
+}
