[HIG-2307] add creation and saving of dashboards (#2631)
Adds backend support for tracking dashboards per project.
Adds frontend which loads and saves dashboard changes.
loom.com/share/f7727b95de68420492944d738c16ca5d

Records structured metrics for PushPayload network resources for the Highlight project 1.
Allows building dashboards for these metrics.

--- a/frontend/src/components/BarChartV2/BarChartV2.module.scss
+++ b/frontend/src/components/BarChartV2/BarChartV2.module.scss
@@ -69,9 +69,12 @@
     line-height: initial;
 }
 
-.verticalSlider {
-    height: 162px;
-    margin-top: 38px;
+.horizontalSlider {
+    height: 16px;
+    left: 31px;
+    margin-right: 45px;
+    position: absolute;
+    top: 38px;
 }
 
 .sliderThumb {
@@ -83,4 +86,8 @@
     left: 50px;
     padding: 2px;
     position: absolute;
+}
+
+.sliderTrack {
+    width: 500px;
 }
