Move sourcemap info to project settings

--- a/frontend/src/pages/Error/components/StackTraceSection/StackTraceSection.module.scss
+++ b/frontend/src/pages/Error/components/StackTraceSection/StackTraceSection.module.scss
@@ -34,6 +34,15 @@
     a {
         margin-top: var(--size-medium);
     }
+
+    .sourcemapActions {
+        align-items: center;
+        display: flex;
+
+        a {
+            margin-right: var(--size-medium);
+        }
+    }
 }
 
 .tooltip {
