Revert workspace CSS changes

--- a/frontend/src/pages/WorkspaceSettings/WorkspaceSettings.module.scss
+++ b/frontend/src/pages/WorkspaceSettings/WorkspaceSettings.module.scss
@@ -7,7 +7,7 @@
     border-radius: 8px;
     margin-top: var(--size-large);
     padding: 30px;
-    width: 100%;
+    width: 700px;
 
     h3 {
         font-size: 18px;
