--- a/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
+++ b/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
@@ -1,9 +1,24 @@
 .list {
-    border: 1px solid var(--color-gray-300);
-    border-radius: var(--border-radius);
-    max-height: 150px;
-    overflow-y: scroll;
-    padding: var(--size-medium);
+    margin-top: var(--size-xLarge);
+
+    :global(.ant-table-cell) {
+        cursor: default;
+    }
+}
+
+.listHeader {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: var(--size-medium);
+
+    h3 {
+        margin-bottom: 0 !important;
+    }
+
+    :global(.ant-input-affix-wrapper) {
+        width: 150px;
+    }
 }
 
 .select {
