Update empty state for query

--- a/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
+++ b/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
@@ -1,5 +1,5 @@
 .list {
-    margin-top: var(--size-xLarge);
+    margin-top: var(--size-medium);
 
     :global(.ant-table-cell) {
         cursor: default;
