Reduce space between tabs and content

--- a/frontend/src/pages/ProjectSettings/ProjectSettings.module.scss
+++ b/frontend/src/pages/ProjectSettings/ProjectSettings.module.scss
@@ -12,7 +12,7 @@
         }
 
         .ant-tabs-content-holder {
-            margin-top: var(--size-xxLarge);
+            margin-top: var(--size-large);
         }
     }
 }
