--- a/frontend/src/pages/Player/Toolbar/Scrubber/Scrubber.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Scrubber/Scrubber.module.scss
@@ -41,7 +41,7 @@
     align-items: center;
     background: var(--color-scrubber-scrub-handle);
     border-radius: var(--border-radius);
-    cursor: move;
+    cursor: ew-resize;
     display: flex;
     height: fit-content;
     justify-content: center;
