--- a/frontend/src/pages/Player/Toolbar/Scrubber/Scrubber.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Scrubber/Scrubber.module.scss
@@ -18,6 +18,12 @@
     width: 100%;
 }
 
+.mask {
+    background-color: var(--color-primary-background);
+    height: 100%;
+    position: absolute;
+}
+
 .activityGraphWrapper {
     position: relative;
 }
