cleanup console.debug, loading state, scrubber relative time only

--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -30,3 +30,11 @@
     position: absolute;
     width: 100%;
 }
+
+.histogramSkeleton {
+    margin-bottom: 26px;
+}
+
+.scrubberSkeleton {
+    margin-bottom: 12px;
+}
