improve edit modal styling

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -100,3 +100,9 @@
     white-space: nowrap;
     width: 70px;
 }
+
+.submitRow {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
+}
