--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -106,3 +106,14 @@
     justify-content: flex-end;
     width: 100%;
 }
+
+.minMaxRow {
+    display: grid;
+    grid-gap: var(--size-medium);
+    grid-template-columns: 80px 1fr 150px 80px 1fr 150px;
+}
+
+.percentileInput {
+    margin-bottom: 0;
+    margin-top: 4px;
+}
