improve monitor display on dashboard card (#2735)
* remove reference lines for non-web-vitals
* improve suggested metrics loading performance
* improve edit modal styling
* make the add metric button create an empty chart and allow editing the metric type
https://www.loom.com/share/6bcaddec76894a029c7fe3fbb29665db

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -68,7 +68,7 @@
     justify-content: space-between;
     padding-right: var(--size-xSmall);
     padding-top: var(--size-small);
-    width: 245px;
+    width: 275px;
 
     button {
         height: var(--size-xLarge);
@@ -89,7 +89,7 @@
     display: flex;
     height: var(--size-xLarge);
     margin: 0 !important;
-    width: 131px;
+    width: 161px;
 }
 
 .monitorName {
@@ -99,4 +99,10 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     width: 70px;
+}
+
+.submitRow {
+    display: flex;
+    justify-content: flex-end;
+    width: 100%;
 }
