fix playback drag, mask outside zoom area

--- a/frontend/src/pages/Player/Toolbar/Scrubber/Scrubber.module.scss
+++ b/frontend/src/pages/Player/Toolbar/Scrubber/Scrubber.module.scss
@@ -49,6 +49,13 @@
     cursor: pointer;
 }
 
+.zoomAreaMask {
+    background-color: var(--color-primary-background);
+    height: 32px;
+    position: absolute;
+    z-index: 2;
+}
+
 .scrubHandleContainer {
     position: absolute;
     z-index: 200;
