--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -25,8 +25,8 @@
 
 .innerBounds {
     height: 100%;
-    margin-left: var(--size-medium);
-    margin-right: var(--size-medium);
+    padding-left: var(--size-medium);
+    padding-right: var(--size-medium);
     position: absolute;
     width: 100%;
 }
