--- a/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
+++ b/frontend/src/pages/Player/Toolbar/TimelineIndicators/TimelineIndicatorsBarGraph/TimelineIndicatorsBarGraph.module.scss
@@ -9,6 +9,32 @@
 }
 
 .histogramContainer {
-    margin-bottom: var(--size-small);
+    margin-bottom: 26px;
+    position: relative;
     z-index: 300;
+}
+
+.timeMarker {
+    background: var(--color-scrubber-scrub-handle);
+    height: 44px;
+    position: absolute;
+    top: 10px;
+    width: 2px;
+    z-index: 200;
+}
+
+.innerBounds {
+    height: 100%;
+    padding-left: var(--size-medium);
+    padding-right: var(--size-medium);
+    position: absolute;
+    width: 100%;
+}
+
+.histogramSkeleton {
+    margin-bottom: 26px;
+}
+
+.scrubberSkeleton {
+    margin-bottom: 12px;
 }
