Drag to update time range for dashboard charts

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -1,3 +1,11 @@
+.card {
+    padding-top: var(--size-small);
+
+    :global(.recharts-cartesian-axis-tick) {
+        user-select: none;
+    }
+}
+
 .noDataContainer {
     align-items: center;
     display: flex;
