support custom timeline aggregators

--- a/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
+++ b/frontend/src/pages/Dashboards/pages/Dashboard/DashboardPage.module.scss
@@ -44,7 +44,7 @@
 .metric {
     display: grid;
     grid-gap: var(--size-medium);
-    grid-template-columns: 2fr 1fr 1fr 2fr;
+    grid-template-columns: 3fr 1fr 1fr 1fr 3fr;
 }
 
 .newMetric {
