--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -116,10 +116,15 @@
 .filtersRow {
     display: grid;
     grid-gap: var(--size-medium);
-    grid-template-columns: 80px 340px 300px;
+    grid-template-columns: 80px 274px 300px 50px;
 }
 
 .formLabel {
     margin-bottom: 0;
     margin-top: 4px;
+}
+
+.removeTagFilterButton {
+    height: 48px;
+    padding: 0 16px;
 }
