add metric monitor units
use units for correct mapping of metric values to human-readable thresholds.
fix issues with metric-monitor processing.

--- a/frontend/src/pages/Alerts/MonitorConfiguration/MonitorConfiguration.module.scss
+++ b/frontend/src/pages/Alerts/MonitorConfiguration/MonitorConfiguration.module.scss
@@ -23,3 +23,13 @@
     top: 36px;
     z-index: 99999;
 }
+
+.thresholdRow {
+    display: flex;
+}
+.threshold {
+    flex-grow: 1;
+}
+.thresholdUnits {
+    flex-shrink: 1;
+}
