--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -136,3 +136,9 @@
     height: 48px;
     padding: 0 16px;
 }
+
+.createNewAlertRow {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
