improve metric monitor configuration UI (#2758)
## Makes a number of enhancements to the metric monitor configuration UI.
* use units for correct mapping of metric values to human-readable thresholds.
* fix issues with metric-monitor processing.
* fix auto-created metrics notification emails.
* fix dashboard card showing non-existant aggregator for histogram
* fix histogram max percentile default
* add new monitor creation button to dashboard card dropdown
* adjust monitor threshold slider styling

https://www.loom.com/share/3792030d869c4ad786943e9b050460ad

--- a/frontend/src/pages/Alerts/MonitorConfiguration/MonitorConfiguration.module.scss
+++ b/frontend/src/pages/Alerts/MonitorConfiguration/MonitorConfiguration.module.scss
@@ -1,3 +1,36 @@
+// set the vertical chart slider color scheme
+:global {
+    .ant-slider:hover .ant-slider-track {
+        background-color: var(--color-blue-400) !important;
+    }
+
+    .ant-slider:hover .ant-slider-handle:not(.ant-tooltip-open) {
+        border-color: var(--color-blue-400) !important;
+    }
+
+    .ant-slider-dot {
+        border-color: var(--color-blue-400) !important;
+    }
+
+    .ant-slider-handle {
+        border-color: var(--color-blue-400) !important;
+    }
+
+    .ant-slider-handle:focus {
+        border-color: var(--color-blue-400) !important;
+        box-shadow: 0 0 0 5px var(--color-blue-400) !important;
+    }
+
+    .ant-slider-handle:hover {
+        border-color: var(--color-blue-400) !important;
+    }
+
+    .ant-slider-handle-dragging.ant-slider-handle-dragging.ant-slider-handle-dragging {
+        border-color: var(--color-blue-400) !important;
+        box-shadow: 0 0 0 5px var(--color-blue-400) !important;
+    }
+}
+
 .chartContainer {
     margin-bottom: var(--size-large);
 }
@@ -22,4 +55,15 @@
     left: 27px;
     top: 36px;
     z-index: 99999;
+}
+
+.thresholdRow {
+    display: flex;
+}
+.threshold {
+    flex-grow: 1;
+}
+.thresholdUnits {
+    margin-left: var(--size-xxSmall);
+    width: 160px;
 }
