Expose API key for uploading sourcemaps

--- a/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
+++ b/frontend/src/pages/WorkspaceSettings/SourcemapSettings/SourcemapSettings.module.scss
@@ -1,3 +1,9 @@
+.sourcemapInfo {
+    border-bottom: 1px solid var(--color-gray-300);
+    margin-bottom: var(--size-xLarge);
+    padding-bottom: var(--size-xLarge);
+}
+
 .list {
     margin-top: var(--size-medium);
 
