add dashboard chart basic loading indicator
only show chart loading skeleton on initial load.
subsequent updates show small loading indicator until data is updated without blocking old data.

--- a/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
+++ b/frontend/src/pages/Dashboards/components/DashboardCard/DashboardCard.module.scss
@@ -73,10 +73,10 @@
 
 .chartButtons {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
     padding-right: var(--size-xSmall);
     padding-top: var(--size-small);
-    width: 275px;
+    width: 300px;
 
     button {
         height: var(--size-xLarge);
