--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -81,6 +81,8 @@
     --logo-gradient-start-color: var(--color-purple);
     --logo-gradient-end-color: #321873;
 
+    --color-brand-pastel-dark: #BCB3D3;
+
     --size-xxxLarge: 56px;
     --size-xxLarge: 48px;
     --size-xLarge: 32px;
