--- a/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
+++ b/frontend/src/pages/Player/MetadataBox/MetadataBox.module.scss
@@ -1,3 +1,5 @@
+$backfill-height: 30px;
+
 .userBox {
     background-color: var(--color-primary-background);
     border: 1px solid var(--color-gray-300);
@@ -7,7 +9,46 @@
     flex-direction: column;
     max-width: var(--right-panel-width);
     position: relative;
+
+    &.backfillShown {
+        padding-top: $backfill-height;
+    }
 }
+
+.backfillContainer {
+    background-color: var(--color-purple);
+    border-radius: var(--border-radius) var(--border-radius) 0 0;
+    cursor: pointer;
+    height: $backfill-height;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+}
+
+.backfillContent {
+    align-items: center;
+    color: var(--color-white);
+    display: flex;
+    height: $backfill-height;
+    font-size: 12px;
+    justify-content: center;
+}
+
+.backfillUserIcon {
+    align-items: center;
+    display: flex;
+    margin: 0 4px;
+
+    svg {
+        width: 18px;
+    }
+}
+
+.backfillInfoIcon svg {
+    font-size: 14px;
+}
+
 .avatar {
     height: 36px;
     width: 36px;
@@ -188,10 +229,6 @@
 }
 
 .starIconWrapper {
-    margin: auto;
-    position: absolute;
-    right: 22px;
-    top: var(--size-medium);
     width: var(--size-medium);
 
     &:hover {
