--- a/frontend/src/components/Breadcrumb/Breadcrumb.module.scss
+++ b/frontend/src/components/Breadcrumb/Breadcrumb.module.scss
@@ -5,6 +5,7 @@
 .icon {
     height: var(--size-large);
     width: var(--size-large);
+    padding-top: var(--size-xxSmall);
 }
 
 .breadcrumb {
@@ -13,7 +14,6 @@
 
     :global(.ant-breadcrumb-separator) {
         color: var(--color-gray-400);
-        display: flex;
         margin-left: var(--size-xxSmall) !important;
         margin-right: var(--size-xxSmall) !important;
     }
